(dev) refactor auth.js and swagger update
